--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ harness = false
 criterion = { version = "0.3.6", features = ["real_blackbox"] }
 libc = "0.2"
 thread-id = "4"
+cfg-if = "1"
+
+[features]
+current_thread_id = []
